--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
         </div>
 
     </main>
+    <footer>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sed sit aspernatur dignissimos earum modi.
+        </p>
+    </footer>
     
 </body>
 </html>
