--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li > <a id="a" href="#">CONTATO</a></li>
         </ul>
     </header>
-    <main>
+    <main id="main1" >
         <div id="diva">
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, molestiae nulla asperio.
@@ -51,6 +51,64 @@
 
     </main>
     <footer>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sed sit aspernatur dignissimos earum modi.
+        </p>
+    </footer>
+    <main id="main2">
+        
+           <section>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat odit, reiciendis officia excepturi suscipit !
+            </p>
+           </section>
+           <section>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat odit, reiciendis officia excepturi suscipit !
+            </p>
+           </section>
+           <section>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat odit, reiciendis officia excepturi suscipit !
+            </p>
+           </section>
+           <section>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat odit, reiciendis officia excepturi suscipit !
+            </p>
+           </section>
+
+    </main>
+    <footer>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sed sit aspernatur dignissimos earum modi.
+        </p>
+    </footer>
+    <main id="main3" >
+        
+        <div id="diva" >
+           <h2 id="h2">RAFAKDA Stote</h2>
+           <h2>preço bom o dia todo</h2>
+           <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque quod voluptatibus laboriosam cupiditate. 
+           </p>
+           <h2 id="h2">RAFAKDA Stote</h2>
+           <h2>preço bom o dia todo</h2>
+
+        </div>
+        <div id="diva" >
+            <h2 id="h2">RAFAKDA Stote</h2>
+            <h2>preço bom o dia todo</h2>
+            <p>
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque quod voluptatibus laboriosam cupiditate. 
+            </p>
+            <h2 id="h2">RAFAKDA Stote</h2>
+            <h2>preço bom o dia todo</h2>
+ 
+         </div>
+
+    </main>
+    <footer id="foot" >
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sed sit aspernatur dignissimos earum modi.
         </p>
