--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input type="text" name="email" placeholder="email" required>
                 <label for="FONE"></label>
                 <input type="number" name="fone" placeholder="fome">
-                <input id="bnt" type="button" value="CLICAR">
+                <input type="submit" value="clicar">
             </form>
 
         </div>
